<resources>
    <string name="app_name">BMI</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="calculate">Calculate</string>
    <string name="cm">cm</string>
    <string name="kg">Kg</string>
    <string name="bmi_calculator_result">BMI Calculator - Result</string>
</resources>