<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:text="@string/bmi_calculator"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:gravity="left"
        android:padding="16dp"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <EditText
        android:id="@+id/tex1"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/tex2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/tex2"
        android:layout_width="271dp"
        android:layout_height="48dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:hint="@string/height"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/tex3"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.886"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/tex3"
        android:layout_width="270dp"
        android:layout_height="44dp"
        android:layout_marginBottom="72dp"
        android:ems="10"
        android:hint="@string/weight"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginBottom="72dp"
        android:onClick="cal"
        android:text="@string/calculate"
        android:background="@color/blue"
        android:backgroundTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="47dp"
        android:layout_height="57dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:text="@string/cm"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="53dp"
        android:layout_height="55dp"
        android:layout_marginBottom="172dp"
        android:text="@string/kg"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tex3" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="191dp"
        android:layout_height="217dp"
        app:layout_constraintBottom_toTopOf="@+id/tex1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:srcCompat="@drawable/bmi" />


</androidx.constraintlayout.widget.ConstraintLayout>